Correction d'alignement du contenu des pages + correction footer terminé

--- a/medicalrecord/src/app/accounttransition/accounttransition.scss
+++ b/medicalrecord/src/app/accounttransition/accounttransition.scss
@@ -2,6 +2,7 @@
   max-width: 6000px;
   width: 90%;
   margin: 5rem auto;
+  margin-top: 6rem;
   padding: 3rem 2rem;
   text-align: center;
   font-family: Arial, sans-serif;
