--- a/medicalrecord/src/app/appointments/appointments.scss
+++ b/medicalrecord/src/app/appointments/appointments.scss
@@ -2,6 +2,7 @@
   max-width: 700px;
   width: 90%;
   margin: 3rem auto;
+  margin-top: 6rem;
   padding: 2rem;
   background: #fafafa;
   border-radius: 12px;
