--- a/medicalrecord/src/app/footer/footer.scss
+++ b/medicalrecord/src/app/footer/footer.scss
@@ -1,6 +1,7 @@
 footer {
   text-align: center;
   padding: 1rem;
+  margin-top: 2rem;
   background-color: #1976d2;
   color: white;
   bottom: 0;
