--- a/medicalrecord/src/app/patientpage/patientpage.scss
+++ b/medicalrecord/src/app/patientpage/patientpage.scss
@@ -44,7 +44,8 @@ $card-bg: #ffffff;
   display: flex;
   align-items: flex-start;
   justify-content: center;
-  padding: 3rem 1rem;
+  padding: 2rem 1rem;
+  margin-top: 2rem;
 }
 
 
