--- a/medicalrecord/src/app/practitionerpage/practitionerpage.scss
+++ b/medicalrecord/src/app/practitionerpage/practitionerpage.scss
@@ -24,7 +24,7 @@ $card-bg: #ffffff;
   display: flex;
   align-items: flex-start;
   justify-content: center;
-  padding: 3rem 1rem;
+  padding: 2rem 1rem;
 }
 
 .card {
