--- a/medicalrecord/src/app/recordtransition/recordtransition.scss
+++ b/medicalrecord/src/app/recordtransition/recordtransition.scss
@@ -4,7 +4,8 @@
   gap: 4rem;                     /* espace entre les colonnes */
   width: 90%;
   max-width: 6000px;
-  margin: 5rem auto;
+  margin: 3rem 3rem 2rem 3rem;
+  margin-top: 6rem;
   font-family: Arial, sans-serif;
 }
 
